--- a/archivo.html
+++ b/archivo.html
@@ -7,12 +7,13 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Cabecera
+                es el blog maestro
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
                 <p>este es otro parrafo para el ejemplo</p>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+              <p> vamo a explotar el merge</p>  
             </div>
         </div>
     </body>
